styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: #FDFBF9;
    font-family: 'Inknut Antiqua', serif;
    color: #0F1B61;
    width: 100vw; 
    overflow-x: hidden; 
    max-width: 100vw;
}
a {
    text-decoration: none; /* Removes the underline */
    color: inherit; /* Inherits the color from the surrounding text */
    font-weight: inherit; /* Inherits the font-weight from the surrounding text */
    font-size: inherit; /* Inherits the font-size from the surrounding text */
}

html{
    scroll-behavior: smooth;
}
header {
    display: flex;
    align-items: center;
    background-color: #FFF7F7;
}


.hire-image{
    width: 40px;
    height: 40px;
    margin-top: 1rem;
}
.hire-me{
    margin-left: auto; /* Pushes the image container to the right */
    margin-right: 1rem;
    display: flex;
    gap: 0.5rem;
    justify-content: center;
    align-items: center;
}

.hire-me p{
    font-weight: bold;
}
nav {
    display: flex;
    align-items: center;
    gap: 20px;
    position: fixed;
    z-index: 11;
    background-color: #fff7f7;
    padding-top: 6rem;
    width: 100vw;
}

main{
    padding: 3rem 1.5rem;
    background-color: #fff7f7;
}

.logo, .divider {
    font-size: 2rem;
    font-weight: bold;
    z-index: 12;
    position: relative;
}

.logo {
    padding-left: 1rem;
}


.introduction-text{
    font-weight: 400;
}

.name{
    font-weight: 900;
    font-size: 2rem;
}

.intro{
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-direction: column;
    margin-top:3rem;
}
.menu-button {
    cursor: pointer;    
    font-size: 1rem;
    position: relative;
    z-index: 12;
}
.programmer-image{
    width: 300px;
    height: 300px;
}
.menu-text, .close-text {
    top: -20px;
    position: absolute;
    transition: transform 0.1s ease-in-out, opacity 0.1s ease-in-out;
    font-weight: bold;
    transform: translateY(0);
}

.close-text {
    opacity: 0;
    transform: translateY(100%);
}

#menu-toggle:checked + label .menu-text {
    opacity: 0;
    transform: translateY(-100%);
}

#menu-toggle:checked + label .close-text {
opacity: 1;
transform: translateY(0);
}

.menu-button {
letter-spacing: 8px;
}

.menu-box {
    position: fixed;
    top: -20%; 
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #B8D5ED;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 10;
    padding-top: 4rem;
    transition: transform 0.5s ease-in-out; 
    transform: translateY(-100%); 
    opacity: 0.8;
}

#menu-toggle:checked ~ .menu-box {
    transform: translateY(0); 
    display: flex;
}

#menu-toggle:checked ~ .menu-box .nav-links li {
    opacity: 1;
    transition: opacity 0.3s ease-in-out 0.2s;
}

.menu-box img {
    width: 30px;
    height: 30px;
  }
.nav-links {
    padding: 0;
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 0.3rem;
    text-align: center;
    justify-content: center;
    }

.nav-links li a {
    text-decoration: none;
    color: #0F1B61;
    font-weight: bold;
    font-size: 1.5rem;
}

.about-text-group{
    width: 80%;
}
.about-title{
    line-height: 2.5rem;
    font-weight: 900;
}

.text-stripe-1{
    background: #F67796;
    width: 30%;
    height: 0.3rem;
    margin: 1rem 0rem;
}

.self-info{
    text-align: justify;
}

.image-container{
    display: flex;
    align-items: center;
    justify-content: center;
}

.self-image{
    width: 100%;
    border-radius: 5%;
    margin: 1rem 0rem;
}

.self-info,.experience-desc{
    text-align: justify;
}

.experience-container h3{
    margin-top: 2rem;
}

.experience-desc{
    display: flex;
    flex-direction: column;
    gap: 2rem;
    background: #e5f3f9;
    padding: 1rem;
    border: 2px solid #13303e;
    border-radius: 1%;
}
.text-stripe-2{
    background: #73CADC;
    width: 30%;
    height: 0.3rem; 
    margin: 1rem 0rem;
}
.project{
    border:1px solid #09272a;
    background-color: #d2f5f3;
    border-radius:1%;
    margin: 0;
    padding: 1rem;
}

.project-stripe{
    background-color: #d2f5f3;
    height: 0.2rem;
    width: 100%;
    margin: 2rem 0rem;
}

.project-group{
    gap: 2rem;
}
.project-title{
    color: #1C494C;
    line-height: 2.5rem;
}

.sub-project-title,.sub-project-description,.sub-project-skills{
    padding:0;
    margin:0;
    color: #1C494C;
}

.sub-project-title{
    line-height: 2.2rem;
    margin-bottom: 0.3rem;
    font-size: 1.3rem;
}

.image-slot{
    display: flex;
    justify-content: center;
}

.sub-project-description{
    line-height: 1.8rem;
    text-align: justify;
}

.project-group{
    display:flex;
    flex-direction: column;
    margin-top: 2rem;
}

.sub-project-skills{
    line-height: 2.2rem;
}

.article-title{
    color: #47280B;
}

.text-stripe-3{
    background-color: #FF5708;
    width: 30%;
    height: 0.3rem;
    margin-bottom: 1rem;
}

.date,.paper-desc,.paper-title{
    margin: 0;
    padding: 0;
    line-height: 2.2rem;
}
.date{
    color:#FF5708;
    font-weight: 600;
}

.paper-title{
    color: #47280B;
    font-size: 1.3rem;
}

.date-partition{
    display: none;
}
.paper-desc{
    color: #47280B;
}

.text-stripe-4{
    background-color: #E1DAD4;
    height: 0.2rem;
    width: 100%;
    margin:2rem 0rem;
}

.skill-title{
    color: #021963;
}


.text-stripe-5{
    background-color: #f67796;
    height: 0.3rem;
    width: 30%;
    margin:1rem 0rem;
    margin-bottom: 2rem;
    /* border-radius: 10px; */
}

.skills-group{
    display: grid;
    gap: 1.4rem;
    grid-template-columns: repeat(2, 1fr);
    /* flex-direction: column; */
    /* margin: 1rem 0rem; */
}

.skill-singular{
    font-size: 0.8rem;
}

.proficiency{
    max-height: 0;
    opacity: 0;
    overflow: hidden;
    transition: max-height 0.5s ease, opacity 0.5s ease;
    font-weight: 400;
    font-size: 0.8rem;
}

.skillset{
    position: relative;
    text-align: center;
    padding: 1rem 1rem;
    background-color: #fcc5d3;
    cursor: pointer;
    border-radius: 5%;
    transition: transform 0.3s ease;
    display: block;
}

input[type="checkbox"]:checked + label .proficiency {
    max-height: 100px;
    opacity: 1;
}

.skillset:active .proficiency {
    max-height: 100px; /* Set this according to the actual content height */
    opacity: 1;
    display: block;
    opacity: 1;
  }

.skillset:hover::before {
    opacity: 1;
  }

footer{
    background-color: #B8D5ED;
    width: 100vw;
    text-align: center;
}

footer p{
    font-size: 1rem;
    background-color: #0F1B61;
    color: #B8D5ED;
    padding: 1rem 1rem;
}

footer ul{
    display: flex;
    gap: 2rem;
    justify-content: center;
    padding: 1rem 1rem;
    padding-top: 2rem;
}

footer ul li{
    list-style: none;
    padding: 0;
    margin: 0;
}

footer ul li a{
    text-decoration: none;
}

.scroll-indicator {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 30rem; /* Adjust this height based on your layout */
    position: relative;
    margin: 5rem 0rem; /* Adjust this margin based on your layout */
  }
  
  .scroll-text {
    font-size: 12px;
    color: #C4C4C4;
    letter-spacing: 2px;
    margin-bottom: 10px;
  }
  
  .vertical-line {
    width: 1px;
    height: 23rem;
    background-color: #C4C4C4;
    margin-bottom: 10px;
  }
  
  .project-text {
    font-size: 16px;
    color: #C4C4C4;
    letter-spacing: 2px;
    margin-bottom: 10px;
  }

  @media (min-width: 768px) {
    .logo{
        padding-left: 3rem;
    }
    .menu-button {
        display: none; 
    }
    
    .menu-box {
        background-color: transparent; 
        position: static; 
        transform: none;
        padding-top: 0;
        opacity: 1;
        display: flex;
        justify-content: flex-start;
    }

    .nav-links {
        flex-direction: row; 
        justify-content: flex-start;
        gap: 3rem; 
        margin-left: 2rem;
    }

    .nav-links li a {
        font-size: 1.2rem; 
        font-weight: 600;
    }

    .intro{
        flex-direction: row;
        justify-content: space-around;
    }
    .introduction-text {
        font-weight: 400;
        line-height: 3.5rem;
        font-size: 2rem;
        line-height: 5rem;
    }

    .programmer-container{
        /* border: 3px solid red; */
        width: 30%;
        height: full;
    }

    .programmer-image{
        width: 90%;
        height: 90%;
    }
    .name{
        font-size: 4rem;
    }
    .Text{
        width: 50%;
        /* border: 3px solid red; */
        height: 100%;
    }
    .Text p{
        font-size: 1.5rem;
    }
    .bio{
        display: flex;
        gap: 3rem;
        align-items: center;
    }

    .self-image{
        width: 400px;
    }
    .intro{
        margin: 10rem 2rem;
    }
    .about,.projects,.article,.skills{
        margin: 10rem 2rem;
    }

    .skill-title,.project-title,.about-title,.article-title{
        font-size: 3rem;
    }
    .text-stripe-4,.project-stripe,.text-stripe-1,.text-stripe-2{
        margin:2rem 0rem;
    }

    .self-info,.experience-desc,.sub-project-description,.sub-project-skills,.paper-desc{
        font-size: 1rem;
    }

    .date{
        font-size: 1.5rem;
    }

    .sub-project-description,.paper-desc{
        line-height:normal;
        margin-bottom: 2rem;
    }

    h3{
        font-size: 1.8rem;
    }
    .project-group {
        display: grid;
        grid-template-columns: repeat(2, 1fr); 
        margin-top: 4rem;
    }
    .project-stripe{
        display: none;
    }
    .paper{
        display: flex;
        margin-top: 4rem;
    }

    .date{
        display: flex;
        align-items: center;
        justify-content: center;
        width: 20%;
    }
    .paper-info{
        width: fit-content;
    }
    .date-partition{
        display: block;
        background-color: #FF5708;
        width: 20%;
        height: 0.2rem;
        margin: auto 3rem;
    }
    .skills-group{
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
    .skillset{
        border-radius: 1%;
    }
    .skillset h3{
        font-size: 1rem;
    }

    .skillset p{
        font-size: 0.9rem;
    }

    .skillset:hover {
        transform: scale(1.03); 
    } 
    footer ul li a img:hover{
        transform: scale(1.5); 
    } 
    .skillset::before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: rgba(126, 102, 199, 0.4); 
        opacity: 0;
        transition: opacity 0.3s ease;
        z-index: 1;
        border-radius: 1%;
    }

    .sub-project-title:hover,.paper-title:hover{
        text-decoration: underline;
    }

    .hire-me{
        margin-right: 2rem;
        font-size: 1.2rem;
        gap: 1.4rem;
    }

    .hire-me p:hover{
        transform: scale(1.1); 
    }

    .nav-links li:hover{
        transform: scale(1.1); 
    }

}
  

